# ghook

./: .env.sample  .gitignore  CHANGELOG.md  README.md  pyproject.toml  webhook.py
.github/: copilot-instructions.md  github-instructions.md
.github/commands/: feature.prompt.md  prime.prompt.md
.github/prompts/: branch.prompt.md  cleanup.prompt.md  document.prompt.md  feature.prompt.md  pr.prompt.md  ship.prompt.md  test.prompt.md  verify.prompt.md
docs/: example_logfile.md  prime.md
scripts/: dev-setup.sh  start-devtunnel.sh
specs/: adil-feature-implementation-plan.md  dev-setup-script-feature.md  integration-testing-feature-implementation-plan.md  integration-testing-feature.md  koozie-ascii-art-implementation-plan.md  repository-cloning-feature.md  sdlc-automation-implementation-plan.md
src/: adil.py  koozie.py  sdlc.py  webhook.py
tests/: conftest.py  test_webhook_integration.py
