[project]
name = "ghook"
version = "0.1.0"
description = "GitHub webhook server with DevTunnel support for local testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
